@@ -10,6 +10,7 @@ Version 1.0.4 to be released
 - Bug #186: MainMenu component in yiic webapp doesn't detect active menu item correctly (Qiang)
 - Bug #187: SET CHARACTER SET is not working for MySQL in some cases (Qiang)
 - Bug #192: CDbLogRoute has several issues (Qiang)
+- Bug #200: CDateFormatter does not recognize timestamp given as a string (Qiang)
 - Bug: Setting the 'expression' option in an access url causes error (Qiang)
 - Bug: CAccessRule.roles should be case sensitive (Qiang)
 - Bug: CDbAuthManager::checkDefaultRoles() uses an undefined variable (Qiang)
